--- a/views/helpdesk_ticket.xml
+++ b/views/helpdesk_ticket.xml
@@ -51,6 +51,11 @@
                     </page>
             </xpath>
 
+            <xpath expr="//field[@name='partner_email']" position="after">
+                <field name="partner_city"/>
+                <field name="partner_street"/>
+            </xpath>
+
         </field>
     </record>
 
@@ -66,6 +71,24 @@
 
             <xpath expr="//field[@name='priority']" position="after">
                <field name="tag_ids" widget="many2many_tags"/>
+            </xpath>
+
+            <xpath expr="//field[@name='partner_name']" position="after">
+                <field name="partner_city" optional="show"/>
+                <field name="partner_street" optional="show"/>
+            </xpath>
+
+        </field>
+    </record>
+
+    <record id="helpdesk_ticket_project_view_tree_inherit" model="ir.ui.view">
+        <field name="name">helpdesk_ticket_view_tree_inherit</field>
+        <field name="model">helpdesk.ticket</field>
+        <field name="inherit_id" ref="helpdesk_mgmt_project.ticket_view_tree"/>
+        <field name="arch" type="xml">
+
+            <xpath expr="//field[@name='project_id']" position="replace">
+                <field name="project_id" optional="show"/>
             </xpath>
 
         </field>
